加入设置备份恢复[高级/备份] 修复设置文字过长右边部件不显示问题 修改首页亮色状态栏 fix ProgressTextDialog noAutoScroll

--- a/app/src/main/res/layout/basic_setting_item.xml
+++ b/app/src/main/res/layout/basic_setting_item.xml
@@ -22,7 +22,7 @@
         android:id="@+id/summary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="1234543212345432222222222222222222222222222222222222222222"
         android:textColor="@color/secondary_text"
         android:textSize="12sp" />
 </LinearLayout>
