--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -4,30 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_background"
-    android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context="cn.vove7.jarvis.fragments.MineFragment">
-
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="180dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_marginBottom="10dp"
         android:baselineAligned="false"
         android:elevation="2dp"
         android:gravity="center_vertical"
-        app:cardCornerRadius="10dp"
         android:orientation="horizontal"
-        app:cardBackgroundColor="@color/google_blue">
+        app:cardBackgroundColor="@color/google_blue"
+        app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="20dp"
-            android:baselineAligned="false">
+            android:baselineAligned="false"
+            android:padding="20dp">
 
             <RelativeLayout
                 android:layout_width="0dp"
@@ -90,9 +88,9 @@
                     <TextView
                         android:id="@+id/user_vip_text"
                         android:layout_width="wrap_content"
-                        android:textColor="@color/app_background"
                         android:layout_height="wrap_content"
-                        android:text="" />
+                        android:text=""
+                        android:textColor="@color/app_background" />
 
                 </LinearLayout>
 
@@ -119,7 +117,9 @@
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="5dp"
         android:divider="@color/app_background"
         android:dividerHeight="5dp"
         tools:listitem="@layout/item_mine_features" />
