--- a/Common/src/main/res/values/styles.xml
+++ b/Common/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:windowBackground">@color/trans</item>
         <item name="android:statusBarColor">@color/trans</item>
         <item name="android:windowIsTranslucent">true</item>
-
+        <item name="android:windowAnimationStyle">@null</item>
         <!--<item name="android:windowAnimationStyle">@style/InOut</item>-->
     </style>
 
