fix音量键监听

--- a/app/src/main/res/xml/base_accessibility_config.xml
+++ b/app/src/main/res/xml/base_accessibility_config.xml
@@ -6,5 +6,6 @@
     android:canRetrieveWindowContent="true"
     android:description="@string/desc_accessibility"
     android:notificationTimeout="0"
+    android:canRequestFilterKeyEvents="true"
     android:settingsActivity="cn.vove7.jarvis.activities.SettingsActivity" />
     <!--android:canRequestTouchExplorationMode="true"-->
