使用BottomDialog 修复全局执行器（返回、最近任务）使用手势（高级无障碍）服务 修复拨打电话显示问题，修改system.call()函数

--- a/app/src/main/res/layout/bottom_dialog_with_toolbar.xml
+++ b/app/src/main/res/layout/bottom_dialog_with_toolbar.xml
@@ -1,50 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="@color/app_foreground"
+    app:layout_behavior="@string/bottom_sheet_behavior">
 
-    <android.support.design.widget.AppBarLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:layout_height="?attr/actionBarSize"
+        android:background="#fff"
+        app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
+        app:title="" />
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_coll"
-            android:layout_width="match_parent"
-            android:layout_height="220dp"
-            app:contentScrim="@color/transparent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:title="">
-
-            <ImageView
-                android:id="@+id/toolbar_img"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/inst_bkg" />
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="pin"
-                app:navigationIcon="@drawable/ic_close_white_24dp"
-                app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
-                app:title=""
-                app:titleTextColor="#fff" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
-
-    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/content_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <!--按钮区-->
+    <include layout="@layout/dialog_footer"/>
+    <!--<LinearLayout-->
+        <!--android:id="@+id/button_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="horizontal">-->
 
-    </android.support.v4.widget.NestedScrollView>
-</android.support.design.widget.CoordinatorLayout>
+    <!--</LinearLayout>-->
+</LinearLayout>
