--- a/app/src/main/res/layout/dialig_edit_marked_data.xml
+++ b/app/src/main/res/layout/dialig_edit_marked_data.xml
@@ -8,16 +8,18 @@
     android:paddingStart="?attr/dialogPreferredPadding"
     android:paddingEnd="?attr/dialogPreferredPadding">
 
+    <RadioButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="无视我" />
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/key_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true">
+        android:layout_height="wrap_content">
 
         <EditText
             android:layout_width="match_parent"
-            android:focusedByDefault="false"
             android:layout_height="wrap_content"
             android:hint="@string/text_show_name" />
     </android.support.design.widget.TextInputLayout>
