ViewFinderBuilder加入文字长度条件 修复网页元素id 条件查找
- 解决保存截图时图库不显示问题
- 加入语音唤醒状态改变通知震动反馈
- 语音唤醒休眠添加10/20分钟选项
- 修改文字提取界面Ui

--- a/app/src/main/res/layout/bottom_dialog_with_toolbar.xml
+++ b/app/src/main/res/layout/bottom_dialog_with_toolbar.xml
@@ -15,19 +15,24 @@
         app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
         app:title="" />
 
+    <ProgressBar
+        android:id="@+id/p_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:paddingTop="2dp"
+        android:visibility="gone"
+        android:paddingBottom="2dp" />
 
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/content_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:minHeight="200dp"
         android:layout_weight="1"/>
+
     <!--按钮区-->
     <include layout="@layout/dialog_footer"/>
-    <!--<LinearLayout-->
-        <!--android:id="@+id/button_layout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal">-->
 
-    <!--</LinearLayout>-->
 </LinearLayout>
