--- a/app/src/main/res/drawable/bg_screen_text_high_light.xml
+++ b/app/src/main/res/drawable/bg_screen_text_high_light.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--标记文字-->
     <item android:state_checked="false" android:state_pressed="false">
         <shape>
             <corners android:radius="6dp" />
-            <solid android:color="#8E6EFAD0" />
+            <stroke android:width="2dp" android:color="@color/green_700" />
         </shape>
     </item>
     <item android:state_checked="false" android:state_pressed="true">
@@ -12,9 +13,10 @@
             <solid android:color="#B56EFAD0" />
         </shape>
     </item>
+    <!--翻译过-->
     <item android:state_checked="true" android:state_pressed="false">
         <shape android:layout_width="wrap_content">
-            <stroke android:width="2dp" android:color="@color/green_700" />
+            <solid android:color="#B56EFAD0" />
             <corners android:radius="6dp" />
             <!--<solid android:color="#A631EB38" />-->
         </shape>
