--- a/app/src/main/res/layout/dialog_pick_text.xml
+++ b/app/src/main/res/layout/dialog_pick_text.xml
@@ -2,19 +2,18 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/app_background"
-    android:orientation="vertical"
-    android:paddingStart="?attr/dialogPreferredPadding"
-    android:paddingEnd="?attr/dialogPreferredPadding">
+    android:minHeight="200dp"
+    android:orientation="vertical">
 
     <cn.vove7.jarvis.view.custom.WarpLinearLayout
         android:id="@+id/words_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp"
-        app:horizontal_Space="2dp"
-        app:vertical_Space="2dp"
-        app:align="left" />
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        app:align="left"
+        app:horizontal_Space="4dp"
+        app:vertical_Space="4dp" />
 </android.support.v7.widget.CardView>
