--- a/app/src/main/res/layout/dialog_assist.xml
+++ b/app/src/main/res/layout/dialog_assist.xml
@@ -20,24 +20,26 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:fitsSystemWindows="true"
             android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
             android:orientation="vertical">
 
             <ProgressBar
                 android:id="@+id/progress_bar"
                 style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="22dp"
+                android:layout_height="18dp"
                 android:indeterminate="true"
                 android:visibility="invisible" />
 
-            <cn.vove7.vtp.view.listview.BottomSheetListView
-                android:id="@+id/bottom_list_view"
+            <GridView
+                android:id="@+id/fun_grid"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:divider="#00000000"
-                app:layout_behavior="@string/bottom_sheet_behavior" />
+                android:gravity="center"
+                android:layout_marginBottom="10dp"
+                android:layout_height="wrap_content" />
 
             <ImageView
                 android:id="@+id/voice_btn"
@@ -48,7 +50,7 @@
                 android:background="@color/trans"
                 android:fitsSystemWindows="true"
                 android:padding="8dp"
-                android:src="@drawable/ic_keyboard_voice_black_24dp" />
+                android:src="@drawable/ic_twotone_blur_on_24px" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
