--- a/app/src/main/res/layout/dialog_assist.xml
+++ b/app/src/main/res/layout/dialog_assist.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    app:layout_behavior="@string/bottom_sheet_behavior">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
         android:id="@+id/bottom_sheet"
@@ -13,7 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         app:behavior_hideable="true"
-        app:behavior_peekHeight="500dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="2dp"
         app:layout_behavior="@string/bottom_sheet_behavior">
@@ -21,25 +18,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:paddingTop="10dp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/drop_bar" />
+            </LinearLayout>
 
             <ProgressBar
                 android:id="@+id/progress_bar"
-                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="18dp"
                 android:indeterminate="true"
+                android:indeterminateTint="@color/google_green"
                 android:visibility="invisible" />
 
             <GridView
                 android:id="@+id/fun_grid"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
                 android:layout_width="match_parent"
-                android:gravity="center"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_height="wrap_content" />
+                android:gravity="center"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp" />
 
             <ImageView
                 android:id="@+id/voice_btn"
@@ -48,7 +59,6 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="6dp"
                 android:background="@color/trans"
-                android:fitsSystemWindows="true"
                 android:padding="8dp"
                 android:src="@drawable/ripple_voice_on_assist" />
         </LinearLayout>
