--- a/app/src/main/res/menu/menu_inst_detail.xml
+++ b/app/src/main/res/menu/menu_inst_detail.xml
@@ -8,7 +8,7 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/menu_edit"
-        android:icon="@drawable/ic_edit_white_24dp"
+        android:icon="@drawable/ic_edit"
         android:title="@string/text_edit"
         app:showAsAction="always" />
     <item
