--- a/app/src/main/res/layout/toast_listening_text.xml
+++ b/app/src/main/res/layout/toast_listening_text.xml
@@ -1,35 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
+    android:orientation="vertical"
     android:paddingBottom="100dp">
 
     <LinearLayout
         android:id="@+id/body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/green_900"
+        android:background="@color/google_blue"
         android:elevation="2dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/ani_img"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/listening_animation" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:gravity="center">
 
-        <TextView
-            android:id="@+id/voice_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="30dp"
-            android:textColor="@color/fff"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            <cn.vove7.jarvis.view.animation.WaveView
+                android:id="@+id/listening_ani"
+                android:layout_width="37dp"
+                android:layout_height="37dp"
+                app:waveColor="@color/fff" />
+
+            <ImageView
+                android:id="@+id/parse_ani"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/parsing_animation"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/voice_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:gravity="center"
+                android:minWidth="60dp"
+                android:text="正在聆听"
+                android:textColor="@color/fff"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:typeface="monospace" />
+        </LinearLayout>
 
     </LinearLayout>
+
 </LinearLayout>
