--- a/app/src/main/res/layout/activity_abc_header.xml
+++ b/app/src/main/res/layout/activity_abc_header.xml
@@ -51,7 +51,6 @@
     <nl.dionsegijn.konfetti.KonfettiView
         android:id="@+id/konfettiView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
