优化屏幕助手显示速度

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,7 +56,10 @@
 
     <style name="ScreenAssist" parent="ScreenPicker">
         <item name="android:navigationBarColor">#3B000000</item>
+        <item name="android:windowEnterAnimation">@anim/fade_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/fade_out_bottom</item>
     </style>
+
 
     <!--防止白色启动背景-->
     <style name="TransparentBackground" parent="Theme.AppCompat.Light.NoActionBar">
