使用参数正则匹配命令

--- a/app/src/main/res/layout/item_of_exec_queue.xml
+++ b/app/src/main/res/layout/item_of_exec_queue.xml
@@ -20,6 +20,6 @@
         android:id="@+id/param_text"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:hint="多个参数可以以,分隔"
+        android:hint="例如：n : 1234, k : sss"
         android:maxLines="1" />
 </LinearLayout>
