--- a/app/src/main/res/layout/dialig_edit_marked_data.xml
+++ b/app/src/main/res/layout/dialig_edit_marked_data.xml
@@ -32,7 +32,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/text_regex" />
+            android:hint="@string/alias_regex" />
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
