--- a/app/src/main/res/layout/toast_listening_text.xml
+++ b/app/src/main/res/layout/toast_listening_text.xml
@@ -1,47 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/body"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/floaty_panel"
-    android:elevation="2dp"
     android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/body"
         android:layout_width="match_parent"
-        android:layout_height="37dp"
-        android:gravity="center"
-        android:padding="0dp">
+        android:layout_height="wrap_content"
+        android:background="@drawable/floaty_panel"
+        android:elevation="2dp"
+        android:gravity="center">
 
-        <cn.vove7.jarvis.view.animation.WaveView
-            android:id="@+id/listening_ani"
-            android:layout_width="37dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="37dp"
-            app:waveColor="@color/fff" />
-
-        <ImageView
-            android:id="@+id/parse_ani"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/parsing_animation"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/voice_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-black"
             android:gravity="center"
-            android:minWidth="60dp"
-            android:text="正在聆听"
-            android:textColor="@color/fff"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:typeface="monospace" />
+            android:padding="0dp">
+
+            <cn.vove7.jarvis.view.animation.WaveView
+                android:id="@+id/listening_ani"
+                android:layout_width="37dp"
+                android:layout_height="37dp"
+                app:waveColor="@color/fff" />
+
+            <ImageView
+                android:id="@+id/parse_ani"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/parsing_animation"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/voice_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:gravity="center"
+                android:minWidth="60dp"
+                android:text="正在聆听"
+                android:textColor="@color/fff"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:typeface="monospace" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
-
