--- a/app/src/main/res/menu/menu_sync.xml
+++ b/app/src/main/res/menu/menu_sync.xml
@@ -3,8 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/menu_item_search"
+        android:icon="@drawable/ic_search"
+        android:title="@string/text_search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="collapseActionView|always" />
+    <item
         android:id="@+id/menu_item_sync"
         android:icon="@drawable/ic_sync_black_24dp"
         android:title="@string/text_sync"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
