--- a/app/src/main/res/layout/header_help.xml
+++ b/app/src/main/res/layout/header_help.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="空空如也"
+        android:text="@string/app_name"
         android:textColor="@color/primary_text"
         android:textSize="16sp" />
 
