- 取消注册时的验证码 - 支持修改邮箱

--- a/app/src/main/res/layout/dialog_user_info.xml
+++ b/app/src/main/res/layout/dialog_user_info.xml
@@ -58,7 +58,7 @@
             android:id="@+id/user_email_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1132412166@qq.com"
+            android:text=""
             android:textSize="16sp"
             android:textStyle="bold" />
     </LinearLayout>
