--- a/app/src/main/res/layout/dialog_sign_up.xml
+++ b/app/src/main/res/layout/dialog_sign_up.xml
@@ -19,7 +19,7 @@
     <android.support.design.widget.TextInputLayout
         android:id="@+id/user_email_view"
         android:layout_width="match_parent"
-        app:helperText="建议QQ邮箱"
+        app:helperText="请注意邮箱务必正确，确保找回密码时正常接收邮件"
         android:layout_height="wrap_content">
 
         <EditText
@@ -57,6 +57,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
+        android:id="@+id/get_ver_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
@@ -66,7 +67,7 @@
             android:id="@+id/ver_code_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:helperText="如果长时间未收到邮件，请检查地址是否正确。若一切无误，可能是邮箱管理员判定验证码邮件为垃圾邮件导致发送失败，可使用QQ与我联系，谢谢:)"
+            app:helperText="@string/text_mail_help"
             android:layout_weight="1">
 
             <EditText
