--- a/app/src/main/res/layout/toast_listening_text.xml
+++ b/app/src/main/res/layout/toast_listening_text.xml
@@ -16,7 +16,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="37dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="0dp">
 
@@ -39,8 +39,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-black"
-                android:gravity="center"
+                android:gravity="center|start"
                 android:minWidth="60dp"
+                android:minHeight="37dp"
                 android:text="正在聆听"
                 android:textColor="@color/fff"
                 android:textSize="14sp"
