离线命令词 添加notSupport() 完善文本编辑对话框 修复设置中无法手动开启无障碍

--- a/app/src/main/res/layout/edit_view.xml
+++ b/app/src/main/res/layout/edit_view.xml
@@ -8,6 +8,7 @@
     android:minWidth="200dp"
     android:minHeight="200dp"
     android:orientation="vertical"
-    android:padding="10dp">
+    android:paddingStart="?attr/dialogPreferredPadding"
+    android:paddingEnd="?attr/dialogPreferredPadding">
 
 </EditText>
