--- a/app/src/main/res/layout/dialog_sel_script.xml
+++ b/app/src/main/res/layout/dialog_sel_script.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:background="@null"
         android:typeface="monospace"
+        android:textSize="13sp"
         android:gravity="start|top"
         android:minLines="15" />
 
