--- a/app/src/main/res/layout/item_normal_icon_title.xml
+++ b/app/src/main/res/layout/item_normal_icon_title.xml
@@ -35,7 +35,8 @@
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:orientation="vertical"
-                android:padding="5dp">
+                android:padding="5dp"
+                android:layout_marginLeft="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
