--- a/app/src/main/res/layout/activity_text_ocr.xml
+++ b/app/src/main/res/layout/activity_text_ocr.xml
@@ -5,15 +5,16 @@
     android:layout_width="match_parent"
     android:background="#22000000"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/helpIcon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_margin="10dp"
-        android:background="?android:selectableItemBackground"
+        android:background="?android:selectableItemBackgroundBorderless"
         android:src="@drawable/ic_help" />
 
     <LinearLayout
@@ -24,7 +25,6 @@
 
         <ProgressBar
             style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
-
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:indeterminate="true" />
