--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,6 +54,10 @@
         <!--<item name="android:windowAnimationStyle">@style/InOut</item>-->
     </style>
 
+    <style name="TextOcr" parent="ScreenPicker" >
+        <item name="android:statusBarColor">@color/half_trans</item>
+    </style>
+
     <style name="ScreenAssist" parent="ScreenPicker">
         <item name="android:navigationBarColor">#3B000000</item>
         <item name="android:windowEnterAnimation">@anim/fade_in_bottom</item>
