--- a/app/src/main/res/layout/activity_expandable_settings.xml
+++ b/app/src/main/res/layout/activity_expandable_settings.xml
@@ -5,33 +5,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/unlock_advan_fun"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/app_foreground"
-        android:elevation="3dp"
-        android:gravity="center_vertical"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:visibility="gone">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/unlock_advan_fun"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:background="@color/app_foreground"-->
+<!--        android:elevation="3dp"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:paddingStart="10dp"-->
+<!--        android:paddingEnd="10dp"-->
+<!--        android:visibility="visible">-->
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/text_need_unlock"
-            android:textSize="15sp" />
+<!--        <TextView-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_weight="1"-->
+<!--            android:text="@string/text_need_unlock"-->
+<!--            android:textSize="15sp" />-->
 
-        <Button
-            android:id="@+id/btn_unlock"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:text="@string/text_unlock"
-            android:textColor="#fff"
-            android:textStyle="bold"
-            android:theme="@style/MaterialButton.Blue" />
-    </LinearLayout>
+<!--        <Button-->
+<!--            android:id="@+id/btn_unlock"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:text="@string/text_unlock"-->
+<!--            android:textColor="#fff"-->
+<!--            android:textStyle="bold"-->
+<!--            android:theme="@style/MaterialButton.Blue" />-->
+<!--    </LinearLayout>-->
 
     <ExpandableListView
         android:id="@+id/expand_list"
