fix 打开指令 指定参数 报错

--- a/app/src/main/res/layout/item_of_exec_queue.xml
+++ b/app/src/main/res/layout/item_of_exec_queue.xml
@@ -20,6 +20,6 @@
         android:id="@+id/param_text"
         android:layout_marginStart="20dp"
         android:layout_width="match_parent"
-        android:hint="当前动作无参数"
+        android:hint="当前动作无需指定参数"
         android:layout_height="wrap_content" />
 </LinearLayout>
