--- a/app/src/main/res/layout/item_whit_icon_title.xml
+++ b/app/src/main/res/layout/item_whit_icon_title.xml
@@ -7,6 +7,7 @@
     android:paddingBottom="10dp"
     android:gravity="center_vertical"
     android:minHeight="50dp"
+    android:background="?attr/selectableItemBackground"
     android:orientation="horizontal">
 
     <cn.vove7.jarvis.view.custom.IconView
