--- a/app/src/main/res/layout/activity_real_main.xml
+++ b/app/src/main/res/layout/activity_real_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="cn.vove7.jarvis.activities.RealMainActivity">
+    tools:context="cn.vove7.jarvis.activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
