- [指令管理菜单]加入指令新建教程链接 - [脚本编辑菜单]加入脚本文档链接

--- a/app/src/main/res/menu/menu_code_editor.xml
+++ b/app/src/main/res/menu/menu_code_editor.xml
@@ -61,8 +61,21 @@
         android:id="@+id/menu_sel_code"
         android:title="选择示例脚本"
         app:showAsAction="never" />
+
     <item
-        android:id="@+id/menu_api_doc"
-        android:title="API文档"
-        app:showAsAction="never" />
+        android:title="文档"
+        app:showAsAction="never">
+        <menu>
+            <item
+                android:id="@+id/menu_api_doc"
+                android:title="API文档" />
+            <item
+                android:id="@+id/menu_view_api"
+                android:title="视图操作教程" />
+            <item
+                android:id="@+id/menu_vosp"
+                android:title="脚本开源项目" />
+        </menu>
+
+    </item>
 </menu>
