--- a/app/src/main/res/layout/float_panel_old.xml
+++ b/app/src/main/res/layout/float_panel_old.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:minWidth="100dp"
+    android:gravity="center"
     android:orientation="vertical"
     android:paddingLeft="10dp"
     android:paddingTop="5dp"
@@ -19,4 +19,4 @@
         android:text="正在聆听"
         android:fontFamily="sans-serif-black"
         android:textColor="#fff" />
-</android.support.v7.widget.CardView>
+</LinearLayout>
