--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -8,12 +8,14 @@
     tools:context="cn.vove7.jarvis.fragments.MineFragment">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/top_panel"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginBottom="10dp"
+        android:foreground="?attr/selectableItemBackground"
         android:baselineAligned="false"
         android:elevation="2dp"
         android:gravity="center_vertical"
