default panel支持修改颜色

--- a/app/src/main/res/values-v26/styles.xml
+++ b/app/src/main/res/values-v26/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/p_green</item>
         <item name="colorPrimaryDark">@color/p_green_dark</item>
-        <item name="colorAccent">@color/google_blue</item>
+        <item name="colorAccent">@color/google_green</item>
         <item name="android:navigationBarColor">@color/p_green</item>
 
         <!--<item name="md_color_title">@color/google_blue</item>-->
