--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,10 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/p_green</item>
         <item name="colorPrimaryDark">@color/p_green_dark</item>
-        <item name="colorAccent">@color/google_blue</item>
+        <item name="colorAccent">@color/google_green</item>
         <item name="android:navigationBarColor">@color/p_green</item>
         <item name="md_corner_radius">10dp</item>
+        <item name="md_button_selector">@color/google_green</item>
         <item name="dialogTheme">@style/Dialog_Fullscreen</item>
         <!--<item name="md_color_content">@color/your_color</item>-->
         <item name="actionModeStyle">@style/MyActionMode</item>
