--- a/app/src/main/res/layout/image_view.xml
+++ b/app/src/main/res/layout/image_view.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="50dp"
+    android:layout_width="match_parent"
     android:gravity="center"
     android:clickable="false"
     android:layout_height="50dp">
 
     <ImageView
         android:id="@+id/image_view"
-        android:layout_width="45dp"
+        android:layout_width="match_parent"
         android:src="@drawable/ic_twotone_graphic_eq"
         android:background="?android:selectableItemBackgroundBorderless"
         android:layout_height="50dp"
