### 1.9.9.3 - 文字识别/提取支持滑动选择 - 长按导航键默认开启屏幕助手 - 修复文字识别一键翻译后，无翻译结果 - 修复指令同步：无支持应用指令时出现的错误

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
 
     <style name="TextOcr" parent="ScreenPicker" >
         <item name="android:statusBarColor">@color/half_trans</item>
+        <item name="android:navigationBarColor">#22000000</item>
     </style>
 
     <style name="ScreenAssist" parent="ScreenPicker">
